--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Meu primeiro site</title>
+  <title>Meu Site</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      text-align: center;
+      padding: 40px;
+    }
+    .box {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      max-width: 500px;
+      margin: auto;
+      box-shadow: 0 0 10px #ccc;
+    }
+  </style>
 </head>
 <body>
-  <h1>Bem-vindo ao meu site</h1>
-  <p>Este é meu primeiro site simples no GitHub.</p>
+  <div class="box">
+    <h1>Bem-vindo ao meu site</h1>
+    <p>Este é meu site simples no GitHub Pages.</p>
+  </div>
 </body>
 </html>
