Change welcome message to 'SEJABEMVINDO'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div class="box">
-    <h1>Bem-vindo ao meu site</h1>
+    <h1>SEJABEMVINDO</h1>
     <p>Este é meu site simples no GitHub Pages.</p>
   </div>
 </body>
