Update paragraph text in index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <div class="box">
     <h1>SEJABEMVINDO</h1>
-    <p>Este é meu site simples no GitHub Pages.</p>
+    <p>em quepossoajudar.</p>
   </div>
 </body>
 </html>
