Fix HTML structure by adding text to closing div

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
   <div class="box">
     <h1>SEJABEMVINDO</h1>
     <p>em quepossoajudar.</p>
-  </div>
+  </div>vamos começar </p>
 </body>
 </html>
