Fix HTML structure and closing tags

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <h1>SEJABEMVINDO</h1>
     <p>em quepossoajudar.</p>
   </div>vamos começar </p>
+</div>AQUI VOCE PODE ESCOLHER </P>
 </body>
 </html>
