Revise index.html for services and contact information
Updated the title and added services, support, and contact sections with relevant details.

--- a/index.html
+++ b/index.html
@@ -2,29 +2,67 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Meu Site</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f2f2f2;
-      text-align: center;
-      padding: 40px;
-    }
-    .box {
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      max-width: 500px;
-      margin: auto;
-      box-shadow: 0 0 10px #ccc;
-    }
-  </style>
+  <title>Serviços de Mídias</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-  <div class="box">
-    <h1>SEJABEMVINDO</h1>
-    <p>em quepossoajudar.</p>
-  </div>vamos começar </p>
-</div>AQUI VOCE PODE ESCOLHER </P>
+
+  <h1>Bem-vindo</h1>
+  <p>
+    Trabalhamos com <strong>IPTV</strong> e
+    <strong>licenças de aplicativos reprodutores de vídeo</strong>,
+    oferecendo praticidade e suporte.
+  </p>
+
+  <h2>Serviços</h2>
+
+  <p>
+    📺 <strong>IPTV</strong><br>
+    Venda de acesso IPTV para reprodução de conteúdo via internet.
+  </p>
+
+  <p>
+    ▶️ <strong>Licença de aplicativos reprodutores de vídeo</strong><br>
+    Licenças compatíveis com smartphone, TV Box e Smart TV.
+  </p>
+
+  <h2>Suporte</h2>
+  <ul>
+    <li>Ativação</li>
+    <li>Dúvidas de uso</li>
+    <li>Orientações básicas</li>
+    <li>Instalação de aplicativos em smartphone</li>
+    <li>Instalação de aplicativos em Smart TV</li>
+  </ul>
+
+  <h2>Contato</h2>
+  <p>
+    Entre em contato para informações, valores e suporte.
+  </p>
+  <p>
+    📱 WhatsApp: <strong>SEU NÚMERO AQUI</strong>
+  </p>
+
+  <h2>Escolha uma opção</h2>
+
+  <p>
+    <a href="https://wa.me/55SEUNUMERO?text=Olá,%20quero%20informações%20sobre%20IPTV" target="_blank">
+      <button>📺 Comprar IPTV</button>
+    </a>
+  </p>
+
+  <p>
+    <a href="https://wa.me/55SEUNUMERO?text=Olá,%20quero%20licença%20de%20aplicativo%20reprodutor%20de%20vídeo" target="_blank">
+      <button>▶️ Licença de App</button>
+    </a>
+  </p>
+
+  <p>
+    <a href="https://wa.me/55SEUNUMERO?text=Olá,%20preciso%20de%20suporte%20ou%20instalação%20de%20aplicativos" target="_blank">
+      <button>🛠️ Suporte / Instalação</button>
+    </a>
+  </p>
+
 </body>
 </html>
