Update WhatsApp contact and links in index.html

--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
     Entre em contato para informações, valores e suporte.
   </p>
   <p>
-    📱 WhatsApp: <strong>SEU NÚMERO AQUI</strong>
+    📱 WhatsApp: <strong>75992457948</strong>
   </p>
 
   <h2>Escolha uma opção</h2>
 
   <p>
-    <a href="https://wa.me/55SEUNUMERO?text=Olá,%20quero%20informações%20sobre%20IPTV" target="_blank">
-      <button>📺 Comprar IPTV</button>
+    <a href="https://wa.me/5575992457948?text=Olá,%20quero%20informações%20sobre%20IPTV" target="_blank">
+      <a href="orientacoes.html">Suporte / Instalação</a>
     </a>
   </p>
 
   <p>
-    <a href="https://wa.me/55SEUNUMERO?text=Olá,%20quero%20licença%20de%20aplicativo%20reprodutor%20de%20vídeo" target="_blank">
+    <a href="https://wa.me/5575992457948?text=Olá,%20quero%20licença%20de%20aplicativo%20reprodutor%20de%20vídeo" target="_blank">
       <button>▶️ Licença de App</button>
     </a>
   </p>
 
   <p>
-    <a href="https://wa.me/55SEUNUMERO?text=Olá,%20preciso%20de%20suporte%20ou%20instalação%20de%20aplicativos" target="_blank">
+    <a href="https://wa.me/5575992457948?text=Olá,%20preciso%20de%20suporte%20ou%20instalação%20de%20aplicativos" target="_blank">
       <button>🛠️ Suporte / Instalação</button>
     </a>
   </p>
