Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <p>
     ▶️ <strong>Licença de aplicativos reprodutores de vídeo</strong><br>
-    Licenças compatíveis com smartphone, TV Box e Smart TV.
+    aplicativos compatíveis com smartphone, TV Box,fire stik,e Smart TV.
   </p>
 
   <h2>Suporte</h2>
@@ -33,6 +33,7 @@
     <li>Dúvidas de uso</li>
     <li>Orientações básicas</li>
     <li>Instalação de aplicativos em smartphone</li>
+<li>Instalação de aplicativos em TV box,fire stik</li>
     <li>Instalação de aplicativos em Smart TV</li>
   </ul>
 
